--- a/vk-renderer.vcxproj.filters
+++ b/vk-renderer.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="task_stack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="vk_init.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="renderer.hpp">
@@ -32,5 +38,15 @@
     <ClInclude Include="task_stack.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vk_init.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="shaders\triangle.vert" />
+    <CustomBuild Include="shaders\triangle.frag" />
   </ItemGroup>
 </Project>
